--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@
 }
 
 .App-header {
-  background-color: #033076;
+  background-color: #3f51b5;
   min-height: 70px;
   padding: 20px;
   color: white;
